--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 }
 </style>
 </head>
-<body bgcolor="B6C4B6">
+<body bgcolor="lightblue">
 <h2 align="center">Student Information System</h2>
 <nav>
 <ul>
