--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
             </tr>
             <tr>
             <td><input type="text" name="contactno" placeholder="[6789][0-9]{9}" required>
-                <i style ="colour: red">MUST BE 10 digits</i>
+                <i style ="color: red">MUST BE 10 digits</i>
             </td>
             <tr> 
                 <td><input type="text" name="subject" placeholder="enter name" required></td>  
